# horizonUI-kit-py

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: components.md  events_and_actions.md  getting_started.md
horizon/: __init__.py  app.py  components.py
horizon/extensions/: __init__.py  custom_elements.py  icons.py
